<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/section_location"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/section_grid"
		style="@style/AppTheme.TextAppearance.Header"
		/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="2"
		>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			>

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/txt_loc_grid_tx"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:inputType="text|textCapCharacters|textNoSuggestions"
				android:hint="@string/hint_transmitted"
				android:imeOptions="actionNext"
				android:nextFocusForward="@+id/txt_loc_grid_rx"
				tools:text="@string/lorem_grid"
				/>

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			>

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/txt_loc_grid_rx"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:inputType="text|textCapCharacters|textNoSuggestions"
				android:hint="@string/hint_received"
				android:imeOptions="actionNext"
				tools:text="@string/lorem_grid"
				/>

		</com.google.android.material.textfield.TextInputLayout>

	</LinearLayout>

</LinearLayout>