<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/section_power"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/section_power"
		style="@style/AppTheme.TextAppearance.Header"
		/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="2"
		>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			>

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/txt_power_tx"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:inputType="number|numberDecimal"
				android:hint="@string/hint_transmitted"
				android:imeOptions="actionNext"
				android:nextFocusForward="@+id/txt_power_rx"
				tools:text="@string/lorem_power"
				/>

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			>

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/txt_power_rx"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:inputType="number|numberDecimal"
				android:hint="@string/hint_transmitted"
				android:imeOptions="actionNext"
				tools:text="@string/lorem_power"
				/>

		</com.google.android.material.textfield.TextInputLayout>

	</LinearLayout>

</LinearLayout>